deprecated/manifests/mednote/ui/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mednote-ui
  name: mednote-ui
spec:
  selector:
    app: mednote-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
