deprecated/manifests/mednote/ui/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mednote-ui
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: 192.168.0.40.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mednote-ui
            port:
              number: 80
